--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,11 @@
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
 vendor
+debug
 
 config.toml
 
 # temp file
 output.md
 template.md
+gtrello.md
