--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,3 +8,9 @@ builds:
       - linux
     goarch:
       - amd64
+        
+# Release customization
+release:
+  github:
+    owner: midorigreen
+    name: gtrello
